--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-
+    <section class="hero container">
+        <div class="hero hero-left">
+            <h1><span class="clr"> Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ex itaque adipisci?</p>
+            <a href="" class="order-btn">order Button</a>
+        </div>
+        <div class="hero">
+            <img src="images/hero1.png" alt="A images">
+        </div>
+    </section>
 </body>
 
 </html>
