--- a/index.html
+++ b/index.html
@@ -10,16 +10,75 @@
 </head>
 
 <body>
-    <section class="hero container">
-        <div class="hero hero-left">
+    <section class="container">
+        <div class="hero-left hero-desc">
             <h1><span class="clr"> Skip</span> The Diet,<br> Just Eat Healthy <br> With Food Network</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ex itaque adipisci?</p>
-            <a href="" class="order-btn">order Button</a>
+            <a href="" class="order-btn">order now</a>
         </div>
-        <div class="hero">
+        <div class="hero-left">
             <img src="images/hero1.png" alt="A images">
         </div>
     </section>
+    <section class="about container">
+        <div class="hero-left">
+            <img src="images/section2.png" alt="">
+        </div>
+        <div class="section2 hero-left hero-desc">
+            <h1>About Us</h1>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab dolor atque unde vero perspiciatis quae
+                provident animi a laboriosam quis, eum voluptatum recusandae? Facilis, perspiciatis odit rerum quod quia
+                accusamus?</p>
+            <a href="" class="order-btn">order now</a>
+        </div>
+    </section>
+
+    <section class="gallery">
+        <div class="section_title ">
+            <h1>My Recipies</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum expedita nesciunt sequi beatae tempora
+                officiis perspiciatis illo eius cum nemo. Iste enim saepe nam numquam labore recusandae, molestiae ea
+                quis minus? Unde, nihil ab.</p>
+        </div>
+        <div class="container">
+            <div class="gallry-item hero-left card">
+                <img src="images/gallery.jpg" alt="">
+                <h3>Reciepe Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, fuga hic. Magnam officia dolore
+                    nesciunt totam accusantium libero itaque laudantium, laborum aperiam, quia temporibus alias iure
+                    ducimus fuga illum deserunt ex? Quos, dolores esse.</p>
+            </div>
+            <div class="gallry-item hero-left card">
+                <img src="images/gallery2.png" alt="">
+                <h3>Reciepe Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, fuga hic. Magnam officia dolore
+                    nesciunt totam accusantium libero itaque laudantium, laborum aperiam, quia temporibus alias iure
+                    ducimus fuga illum deserunt ex? Quos, dolores esse.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="container card">
+        <div class="members hero-left">
+            <h1>700k</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="members hero-left">
+            <h1>700k</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="members hero-left">
+            <h1>700k</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+    </section>
+
+    <footer>
+        <h1> <span class="clr">Eat</span> Fresh</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </footer>
+
 </body>
 
 </html>
